# koyomi

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix
module/: default.nix
src/: calendar.rs  config.rs  events.rs  input.rs  lib.rs  main.rs  mcp.rs  recurrence.rs  reminder.rs  render.rs  scripting.rs
src/platform/: mod.rs
src/platform/macos/: mod.rs
