[package]
name = "kodate"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Koyomi (暦) — calendar app for macOS and Linux"
homepage = "https://github.com/pleme-io/koyomi"
repository = "https://github.com/pleme-io/koyomi"
readme = "README.md"
license = "MIT"
categories = ["os::macos-apis"]
keywords = ["calendar", "caldav", "macos", "scheduling"]

[[bin]]
name = "koyomi"
path = "src/main.rs"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
# Pleme-io shared libraries
garasu = { path = "../garasu" }
madori = { path = "../madori" }
egaku = { path = "../egaku" }
shikumi = { path = "../shikumi" }
kaname = { git = "https://github.com/pleme-io/kaname" }
soushi = { git = "https://github.com/pleme-io/soushi" }
awase = { git = "https://github.com/pleme-io/awase" }
schemars = "1"

# GPU rendering (needed for direct wgpu types in render code)
wgpu = "25"
glyphon = "0.9"
bytemuck = { version = "1", features = ["derive"] }

# CLI and config
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Event IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Async runtime (for daemon mode)
tokio = { version = "1", features = ["full"] }

# Filesystem
dirs = "6.0"

[dev-dependencies]
tempfile = "3"

# Unify path deps with git deps used by madori/garasu
[patch."https://github.com/pleme-io/kaname"]
kaname = { path = "../kaname" }

[patch."https://github.com/pleme-io/garasu"]
garasu = { path = "../garasu" }

[patch."https://github.com/pleme-io/shikumi"]
shikumi = { path = "../shikumi" }

[patch."https://github.com/pleme-io/egaku"]
egaku = { path = "../egaku" }

[patch."https://github.com/pleme-io/soushi"]
soushi = { path = "../soushi" }

[patch."https://github.com/pleme-io/awase"]
awase = { path = "../awase" }
